--- a/views/components/banner.pug
+++ b/views/components/banner.pug
@@ -17,7 +17,7 @@ mixin banner(value = {})
             .layout-align-self-end
               button.layer-footer.action-btn.action-btn-hover.layer-shadow.layer-round.layout-padding-smallest.layer-white.layer-secondary-light-hover.layer-secondary-focus.style-primary.style-surface-hover.style-surface-focus.layer-hero-scroll-down(type="button" tabindex="0")
                 span.action-btn-group
-                  i.action-icon.style-font-sz-24(inline) expand_more
+                  i.action-icon.style-font-size-24(inline) expand_more
                   span.action-btn-section
                     span.action-btn-spacer
                     span.action-btn-content Scroll Down
