--- a/views/pages/404.pug
+++ b/views/pages/404.pug
@@ -1,6 +1,7 @@
 extends ../app.pug
 include ../components/sections.pug
 include ../components/layout.pug
+include ../components/footer.pug
 include ../components/layer.pug
 include ../components/text.pug
 include ../components/link.pug
