--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -51,18 +51,18 @@ block content
 						})
 						+p({
 							content: "E-commerse",
-							class: "layout-block style-font-15--device-phone style-font-16"
+							class: "layout-block style-font-16--device-phone style-font-18"
 						})
 						+p({
 							content: "Design Executive",
-							class: "layout-block style-font-15--device-phone style-font-16"
+							class: "layout-block style-font-16--device-phone style-font-18"
 						})
 
 					//- 3rd Column
 					+column({
 						class: "layout-col-7"
 					})
-						p.style-font-15--device-phone.style-font-17.layout-margin-dull(lorem="1")
+						p.layout-margin-dull(lorem="1")
 
 			+main({
 				class: "layout-padding-vert-large"
@@ -75,44 +75,18 @@ block content
 					content: "click here."
 				})
 
-	//- Banner layer 1
-	+layer({
-		class: "layer-color-dark"
-	})
-		+layout({
-			class: "layout-contain-large layout-enlarge-vert"
-		})
-			+head({
-					class: "style-center"
-			})
-				h2.layout-padding-vert.style-bold-font.style-600.style-color-white  Got your attention
-					span.style-color-tertiary-dark . Good!
-
-	//- Banner layer 2
+	//- Banner layer
 	+layer({
 		class: "layer-color-primary"
 	})
 		+layout({
-			class: "layout-contain-large layout-enlarge-vert"
+			class: "layout-contain-large layout"
 		})
 			+head({
 					class: "style-center"
 			})
-				h2.layout-padding-vert.style-bold-font.style-600.style-color-white  Got your attention
-					span.style-color-tertiary-dark . Good!
-
-	//- Banner layer 3
-	+layer({
-		class: "layer-color-tertiary"
-	})
-		+layout({
-			class: "layout-contain-large layout-enlarge-vert"
-		})
-			+head({
-					class: "layout-padding-vert style-bold-font style-600 h2 style-color-dark style-center"
-			})
-				h2.layout-padding-vert.style-bold-font.style-600.style-color-dark  Got your attention
-					span.style-color-secondary-dark . Good!
+				h2.layout-padding-vert.style-bold-font.style-600.style-color-white.style-font-40--device-lt-tablet.style-font-size-larger--device-gt-phone Projects
+					span.style-color-tertiary-dark .
 
 	//- Breakthrough layer
 	+layer
@@ -129,14 +103,14 @@ block content
 					})
 						+p({
 							content: "Breakthrough<br>Limits!",
-							class: "style-color-primary style-bold-font style-600 style-font-15--device-phone style-line-height h3"
+							class: "style-color-primary style-bold-font style-600 style-font-30 style-line-height"
 						})
 
 					//- 2nd Column
 					+column({
 						class: "layout-col-6"
 					})
-						p.style-font-15--device-phone.style-font-18.layout-block.layout-margin-dull(lorem="1")
+						p.layout-block.layout-margin-dull(lorem="1")
 
 	//- Image Column layer
 	+layer
