--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -1,6 +1,7 @@
 extends ../app.pug
 include ../components/sections.pug
 include ../components/layout.pug
+include ../components/footer.pug
 include ../components/layer.pug
 include ../components/text.pug
 
@@ -16,45 +17,56 @@ block pageInfo
 block content
 	//- Intro layer
 	+layer({
-		class: "layout-padding-horz layout-enlarge-vert"
+		class: "layout-padding-horz"
 	})
 		+layout({
-			class: "layout-contain-small"
+			class: "layout-contain-small layout-vert-centered-box"
 		})
-			+head("The sitemap!")
-			ul
-				//- Index
-				li
-					+link({
-						href: "/",
-						content: "Home"
-					})
-					+p(" - Homepage galor, its the begining of our little adventure. Do you want to go back?")
-					br
+			section
+				+head("The sitemap!")
+				+main
+					ul
+						//- Index
+						li
+							+link({
+								href: "/",
+								class: "style-italic style-underline",
+								content: "Home"
+							})
+							+p(" - Homepage galor, its the begining of our little adventure. Do you want to go back?")
+							br
 
-				//- About
-				li
-					+link({
-						href: "/about",
-						content: "About"
-					})
-					+p(" - The story of me, myself and I. Shall we begin?")
-					br
+						//- About
+						li
+							+link({
+								href: "/about",
+								class: "style-italic style-underline",
+								content: "About"
+							})
+							+p(" - The story of me, myself and I. Shall we begin?")
+							br
 
-				//- Projects
-				li
-					+link({
-						href: "/projects",
-						content: "Projects"
-					})
-					+p(" - Hardwork and perseverance, hear all about it.")
-					br
+						//- Projects
+						li
+							+link({
+								href: "/projects",
+								class: "style-italic style-underline",
+								content: "Projects"
+							})
+							+p(" - Hardwork and perseverance, hear all about it.")
+							br
 
-				//- Contact
-				li
-					+link({
-						href: "/contact",
-						content: "Contact"
-					})
-					+p(" - Do you have a project that demands perservance and passion? Then, lets talk.")
-					br
+						//- Contact
+						li
+							+link({
+								href: "/contact",
+								class: "style-italic style-underline",
+								content: "Contact"
+							})
+							+p(" - Do you have a project that demands perservance and passion? Then, lets talk.")
+							br
+
+block footer
+	+footer({
+		class: "footer-stuck layout-margin-vert-top"
+	})
