--- a/src/scss/components/layout.scss
+++ b/src/scss/components/layout.scss
@@ -15,11 +15,14 @@
     }
 
     &-vert-centered-box {
-        align-items: center;
-        position: relative;
-        height: 100vh;
-        display: flex;
-        margin-top: 0;
+        margin-top: $size-huge;
+        @media (min-width: #{$tablet}px) {
+            align-items: center;
+            position: relative;
+            height: 100vh;
+            display: flex;
+            margin-top: 0;
+        }
     }
 
     // $dimension: ("width", "height");
@@ -469,176 +472,24 @@
             $basic-dirs: ("horz": ("left", "right"),
                     "vert": ("top", "bottom"));
 
-            #{$spacing}: {
-                bottom: $size;
-                right: $size;
-                left: $size;
-                top: $size;
-            }
-
-            @each $type, $val in $sizes {
-                &-#{$type} {
-                    $type-parent: &;
-
-                    @each $basic-dir, $dirs in $basic-dirs {
-
+            @each $basic-dir, $dirs in $basic-dirs {
+                &,
+                &-#{$basic-dir} {
+                    @each $dir in $dirs {
                         &,
-                        &-#{$basic-dir} {
-                            @each $dir in $dirs {
+                        &-#{$dir} {
+                            & {
+                                #{$spacing}-#{$dir}: $size;
+                            }
 
-                                &,
-                                &-#{$dir} {
-                                    #{$spacing}-#{$dir}: $val;
-                                }
-
-                                @at-root #{$spacing-parent}-#{$type},
-                                #{$spacing-parent}-#{$type}-#{$dir},
-                                #{$type-parent}-#{$basic-dir}-#{$dir},
-                                #{$type-parent}-#{$dir}-#{$basic-dir},
-                                #{$spacing-parent}-#{$basic-dir}-#{$type},
-                                #{$spacing-parent}-#{$basic-dir}-#{$type}-#{$dir},
-                                #{$spacing-parent}-#{$basic-dir}-#{$dir}-#{$type} {
+                            @each $type, $val in $sizes {
+                                &-#{$type} {
                                     #{$spacing}-#{$dir}: $val;
                                     @include deviceList(#{$spacing}-#{$dir}, $val);
                                 }
                             }
                         }
                     }
-                }
-
-                // Padding sizes
-                &-small {
-                    #{$spacing}: {
-                        bottom: $size-small;
-                        right: $size-small;
-                        left: $size-small;
-                        top: $size-small;
-                    }
-
-                    &-horz {
-                        padding-right: $size-small;
-                        padding-left: $size-small;
-                    }
-                }
-            }
-
-            /* -- Horizontal Padding -- */
-            &,
-            &-horz {
-                #{$spacing}-right: $size;
-                #{$spacing}-left: $size;
-
-                &-small {
-                    #{$spacing}-right: $size-small;
-                    #{$spacing}-left: $size-small;
-                }
-
-                &-mid {
-                    #{$spacing}-right: $size-mid;
-                    #{$spacing}-left: $size-mid;
-                }
-
-                &-large {
-                    #{$spacing}-right: $size-large;
-                    #{$spacing}-left: $size-large;
-                }
-
-                &-left {
-                    #{$spacing}-left: $size;
-                }
-
-                &-right {
-                    #{$spacing}-right: $size;
-                }
-
-                &-left-small,
-                &-small-left {
-                    #{$spacing}-left: $size-small;
-                }
-
-                &-right-small,
-                &-small-right {
-                    #{$spacing}-right: $size-small;
-                }
-
-                &-left-mid,
-                &-mid-left {
-                    #{$spacing}-left: $size-mid;
-                }
-
-                &-right-mid,
-                &-mid-right {
-                    #{$spacing}-right: $size-mid;
-                }
-
-                &-left-large,
-                &-large-left {
-                    #{$spacing}-left: $size-large;
-                }
-
-                &-right-large,
-                &-large-right {
-                    #{$spacing}-right: $size-large;
-                }
-            }
-
-            /* -- Vertical Padding -- */
-            &,
-            &-vert {
-                #{$spacing}-bottom: $size;
-                #{$spacing}-top: $size;
-
-                &-small {
-                    #{$spacing}-bottom: $size-small;
-                    #{$spacing}-top: $size-small;
-                }
-
-                &-mid {
-                    #{$spacing}-bottom: $size-mid;
-                    #{$spacing}-top: $size-mid;
-                }
-
-                &-large {
-                    #{$spacing}-bottom: $size-large;
-                    #{$spacing}-top: $size-large;
-                }
-
-                &-top {
-                    #{$spacing}-top: $size;
-                }
-
-                &-bottom {
-                    #{$spacing}-bottom: $size;
-                }
-
-                &-top-small,
-                &-small-top {
-                    #{$spacing}-top: $size-small;
-                }
-
-                &-bottom-small,
-                &-small-bottom {
-                    #{$spacing}-bottom: $size-small;
-                }
-
-                &-top-mid,
-                &-mid-top {
-                    #{$spacing}-top: $size-mid;
-                }
-
-                &-bottom-mid,
-                &-mid-bottom {
-                    #{$spacing}-bottom: $size-mid;
-                }
-
-                &-top-large,
-                &-large-top {
-                    #{$spacing}-top: $size-large;
-                }
-
-                &-bottom-large,
-                &-large-bottom {
-                    #{$spacing}-bottom: $size-large;
                 }
             }
         }
