--- a/views/app.pug
+++ b/views/app.pug
@@ -97,10 +97,10 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 
 		.layer-action-center.layer-action-center-show
 			article.layer-action-group
-				.layer-shadow.layer-round.layout-align-self-end.layout-margin-horz
+				.layer-shadow.layer-round.layout-align-self-end.layout-margin-horz-small
 					button.back-to-top.action-btn.action-btn-hover.layer-round.layout-padding-smallest.layer-primary.layer-primary-dark-hover.layer-primary-light-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
 						span.action-btn-group
-							i.action-icon.style-font-sz-24(inline) expand_less
+							i.action-icon.style-font-size-24(inline) expand_less
 							span.action-btn-section
 								span.action-btn-spacer
 								span.action-btn-content Back To Top
