--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -16,7 +16,7 @@ mixin navbar(value = {})
 						href: "/",
 						class: "navbar-title style-primary-dark-hover style-primary-focus"
 					})(itemprop="url")
-						img.navbar-logo(src="/assets/gear-svg-icon-logo-color-2.svg" alt="The Joseph Ojo logo." inline)
+						img.navbar-logo(src="/assets/gear-svg-icon-logo-color-2.svg" alt="Logo." inline)
 						span.navbar-title-line
 						span(itemprop="name") JOSEPH!
 					.layout-spacer
@@ -24,7 +24,7 @@ mixin navbar(value = {})
 						.layout-inline-block
 							a.navbar-menu.action-btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary.style-hover-primary.style-focus-primary(title="Menu Bar")
 								span.action-btn-group
-									i.action-icon.style-font-family-bold.style-font-sz-24(inline) menu
+									i.action-icon.style-font-family-bold.style-font-size-24(inline) menu
 
 				.layout-spacer.navbar-desktop
 				.navbar-main
