--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -8,7 +8,7 @@ mixin footer(value = {})
 				+link({
 					href: "https://github.com/okikio",
 					content: "Okiki Ojo"
-				})
+				})(target="_blank")
 				span  |
 				span= " "
 				span.action-btn.pointer-default
