Added space between in 404 page

--- a/views/pages/404.pug
+++ b/views/pages/404.pug
@@ -28,10 +28,10 @@ block content
 				+main({
 					class: "style-center",
 				})
-					+p("Sorry, the page you are looking for doesn't exist. How about going back ")
+					+p("Sorry, the page you are looking for doesn't exist. How about going back")
 					+link({
 						href: "/",
-						class: "style-italic style-underline",
+						class: "style-italic style-underline layout-margin-left-mini",
 						content: "home"
 					})
 					+p(".")
