--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -225,6 +225,20 @@ li, .li {
     }
 }
 
+.layer, .footer {
+    a {
+        &:active,
+        &:focus {
+            border: solid 2px $secondary-light;
+            box-shadow: inset 0 0 0 2px #000;
+            padding-right: 5px;
+            border-radius: 6px;
+            padding-left: 5px;
+            line-height: 1.5;
+        }
+    }
+}
+
 .footer {
     font-size: 16px;
 
