--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -6,7 +6,7 @@ mixin hero(value = {})
   .layer.layer-hero-id
     article.layout-padding-bottom.layout-padding-dull-top.layout-contain-larger.layout-padding-horz-small
       .layer-hero.header-top-spot
-        +image(image)(inline)
+        +image(image)
 
         .layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-sub-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center
           .layer-content.layout-contain
