--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -11,7 +11,7 @@ block pageInfo
 			url: "/about",
 			name: "about",
 			title: "A little about me.",
-			description: "My story. What drove me to become a Mechatronics Engineer..."
+			description: "What drove me to become a Mechatronics Engineer..."
 		};
 
 block content
@@ -41,6 +41,6 @@ block content
 				+p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes. <br> <br> In case you were wondering what my skills outside engineering are, they include problem-solving, leadership, communication and conflict resolution. For more info. check out my resume ")
 				+link({
 					href: "/resume",
-					class: "layout-margin-dull",
+					class: "layout-margin-dull layout-margin-left-mini",
 					content: "here."
 				})
