--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -68,10 +68,10 @@ block content
 				class: "layout-padding-vert-large"
 			})
 				span.layout-margin-horz-left.layout-inline-block= " "
-				+p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... For more info ")
+				+p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... For more info")
 				+link({
 					href: "/about",
-					class: "layout-margin-dull layout-margin-right-mini",
+					class: "layout-margin-dull layout-margin-left-mini",
 					content: "click here."
 				})
 
