--- a/views/app.pug
+++ b/views/app.pug
@@ -11,7 +11,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 				let page = {
 					url: "/",
 					name: "index",
-					title: "Joseph Ojo.",
+					title: "The mechatronics engineer who could.",
 					description: "The porfolio of Joseph, it contains all amazing projects etc..."
 				};
 
