--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -38,9 +38,9 @@ block content
 				class: "layout-padding-vert-small"
 			})
 				span.layout-margin-horz-left-large.layout-inline-block= " "
-				+p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes. <br> <br> In case you were wondering what my skills outside engineering are, they include problem-solving, leadership, communication and conflict resolution. For more info. check out my resume ")
+				+p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes. <br> <br> In case you were wondering what my skills outside engineering are, they include problem-solving, leadership, communication and conflict resolution. For more info. check out my resume")
 				+link({
 					href: "/resume",
-					class: "layout-margin-dull layout-margin-left-mini",
+					class: "layout-margin-vert-dull layout-margin-left-mini",
 					content: "here."
 				})
