--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -11,7 +11,7 @@ include ../components/row.pug
 block content
 	//- Hero layer
 	+hero({
-		title: "Mechatronics",
+		title: "The mechatronics<br> engineer who could.",
 		content: "Crafting the extrodinary is my passion.",
 		image: {
 			class: "effect-parallax hero-img",
@@ -71,7 +71,7 @@ block content
 				+p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... For more info")
 				+link({
 					href: "/about",
-					class: "layout-margin-dull layout-margin-left-mini",
+					class: "layout-margin-vert-dull layout-margin-left-mini",
 					content: "click here."
 				})
 
@@ -85,7 +85,7 @@ block content
 			+head({
 					class: "style-center"
 			})
-				h2.layout-padding-vert.style-bold-font.style-600.style-color-white.style-font-40--device-lt-tablet.style-font-size-larger--device-gt-phone Projects
+				h3.layout-padding-vert.style-bold-font.style-600.style-color-white.style-font-40--device-lt-tablet.style-font-size-larger--device-gt-phone Projects
 					span.style-color-tertiary-dark .
 
 	//- Breakthrough layer
