Added h1 to pages withou t hero or banner

--- a/views/pages/404.pug
+++ b/views/pages/404.pug
@@ -24,7 +24,8 @@ block content
 			class: "layout-contain-small layout-vert-centered-box"
 		})
 			section
-				+head("404, Page Not Found.")
+				+head
+          h1.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center 404, Page Not Found.
 				+main({
 					class: "style-center",
 				})
