--- a/views/pages/offline.pug
+++ b/views/pages/offline.pug
@@ -22,7 +22,8 @@ block content
 			class: "layout-contain-small layout-vert-centered-box"
 		})
 			section
-				+head("Yikes you're offline!")
+				+head
+          h1.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center Yikes you're offline!
 				+main({
 					class: "style-center",
 				})
