--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -23,7 +23,8 @@ block content
 			class: "layout-contain-small layout-vert-centered-box"
 		})
 			section
-				+head("The sitemap!")
+				+head
+          h1.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center The sitemap!
 				+main
 					ul
 						//- Index
