--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -40,7 +40,7 @@ block content
 						//- About
 						li
 							+link({
-								href: "/about",
+								href: "/about-me",
 								class: "style-italic style-underline",
 								content: "About"
 							})
@@ -50,7 +50,7 @@ block content
 						//- Projects
 						li
 							+link({
-								href: "/projects",
+								href: "/my-projects",
 								class: "style-italic style-underline",
 								content: "Projects"
 							})
@@ -60,7 +60,7 @@ block content
 						//- Contact
 						li
 							+link({
-								href: "/contact",
+								href: "/my-contact-info",
 								class: "style-italic style-underline",
 								content: "Contact"
 							})
