--- a/views/app.pug
+++ b/views/app.pug
@@ -24,8 +24,6 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 
 		meta(name="robots" content="index,follow")
 		meta(name="copyright" content="Joseph Ojo")
-		meta(name="shortlink" content="https://www.josephojo.com/")
-		meta(name="canonical" content="https://www.josephojo.com/")
 
 		meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
 		meta(name="keywords" content="Joseph Ojo, josephojo, josephojo.com, joseph, ojo, portfolio, engineer, web, mechatronics, mech, robots, UOIT, OntarioTech, tech, website, netlify")
@@ -76,7 +74,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
 		link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
 		link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
-		link(rel="stylesheet" href="./css/app.min.css" inline async)
+		link(rel="stylesheet" href="./css/app.min.css" async)
 
 		<!--[if lt IE 9]>
 			link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
