--- a/views/pages/my-contact-info.pug
+++ b/views/pages/my-contact-info.pug
@@ -10,8 +10,8 @@ block pageInfo
 		let page = {
 			url: "/contact",
 			name: "contact",
-			title: "Let's talk.",
-			description: "Let's talk, do you have a project that requires passion and dedication, then let's talk..."
+			title: "Let's talk. I'm ready, are you?",
+			description: "Do you have a project that requires passion and dedication, then let's talk. Let's create something extrodinary."
 		};
 
 block content
