canonical URL, long URL, title, and description

--- a/views/app.pug
+++ b/views/app.pug
@@ -12,7 +12,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 					url: "/",
 					name: "index",
 					title: "The mechatronics engineer who could.",
-					description: "The porfolio of Joseph, it contains all amazing projects etc..."
+					description: "Hello, my name is Joseph Ojo and this is my portfolio website. The website contains all the amazing projects I have done, it even contains my resume and ways to contact me. Come on over."
 				};
 
 		meta(charset="utf-8")
@@ -32,9 +32,9 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		meta(name="twitter:site", content="@jo-ojo")
 		meta(property="article:author" content="Joseph Ojo")
 		meta(property="og:site_name" content="josephojo.com")
-		meta(itemprop="image" content="https://www.josephojo.com/android-icon-192x192.png")
-		meta(property="og:image" content="https://www.josephojo.com/android-icon-192x192.png")
-		meta(name="twitter:image" content="https://www.josephojo.com/android-icon-192x192.png")
+		meta(itemprop="image" content="https://www.josephojo.com/android-icon-512x512.png")
+		meta(property="og:image" content="https://www.josephojo.com/android-icon-512x512.png")
+		meta(name="twitter:image" content="https://www.josephojo.com/android-icon-512x512.png")
 
 		block seo
 			+seo(page)
