--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -5,7 +5,7 @@ mixin navbar(value = {})
 	- let { name } = value;
 	- let _class = value.class;
 
-	- let tabs = ["about-me", "my-projects", "my-contact-info"];
+	- let tabs = ["about-me", "my-projects", "contact-me"];
 	- let focusIndex = tabs.indexOf(name.toLowerCase());
 
 	header.header
