--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -8,9 +8,9 @@ include ../components/text.pug
 block pageInfo
 	-
 		let page = {
-			url: "/contact",
-			name: "contact",
-			title: "Let's talk. I'm ready, are you?",
+			url: "/contact-me",
+			name: "contact-me",
+			title: "Let's talk. I'm ready to create something awesome, are you?",
 			description: "Do you have a project that requires passion and dedication, then let's talk. Let's create something extrodinary."
 		};
 
