--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -8,9 +8,9 @@ include ../components/text.pug
 block pageInfo
 	-
 		let page = {
-			url: "/projects",
-			name: "projects",
-			title: "A showcase of some of my works.",
+			url: "/my-projects",
+			name: "my-projects",
+			title: "A showcase of some of the projects I have taken on.",
 			description: "A potfolio of projects I have completed, and even some that are still on-going..."
 		};
 
