--- a/views/pages/my-resume.pug
+++ b/views/pages/my-resume.pug
@@ -8,9 +8,9 @@ include ../components/text.pug
 block pageInfo
 	-
 		let page = {
-			url: "/resume",
-			name: "resume",
-			title: "My resume.",
+			url: "/my-resume",
+			name: "my-resume",
+			title: "My professional resume, have a look.",
 			description: "The resume of Joseph Ojo, a collection of all the professional work accomplished by Joseph Ojo."
 		};
 
