--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -10,8 +10,8 @@ block pageInfo
 		let page = {
 			url: "/sitemap",
 			name: "sitemap",
-			title: "Lets find you a destination!",
-			description: "A little lost, here is a map..."
+			title: "Lets find you a destination, the destination of greatness!",
+			description: "A little lost, here is a map, now where do you want to go?"
 		};
 
 block content
