--- a/views/pages/about-me.pug
+++ b/views/pages/about-me.pug
@@ -10,7 +10,7 @@ block pageInfo
 		let page = {
 			url: "/about-me",
 			name: "about",
-			title: "A little about me, on how I became a mechatronics engineer.",
+			title: "A little about me, and how I became a mechatronics engineer.",
 			description: "What drove me to become a Mechatronics Engineer, why, how, wait what?"
 		};
 
