Added some detail to my-projects page

--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -17,8 +17,8 @@ block pageInfo
 block content
 	//- Banner layer
 	+banner({
-		title: "Projects",
-		content: "...",
+		title: "A showcase of some of the projects I have taken on.",
+		content: "A potfolio of projects I have completed, and even some that are still on-going.",
 		image: {
 			class: "effect-parallax hero-img",
 			src: "/assets/blue-sky",
@@ -33,7 +33,7 @@ block content
 		+layout({
 			class: "layout-shorten layout-contain"
 		})
-			+head("Lorem itpsuim")
+			+head("My projects")
 			+main({
 				class: "layout-padding-vert-small"
 			})
