Lots of SEO ready info

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -11,7 +11,7 @@ include ../components/row.pug
 block content
 	//- Hero layer
 	+hero({
-		title: "The mechatronics<br> engineer who could.",
+		title: "Joseph Ojo, the one who could.",
 		content: "Crafting the extrodinary is my passion.",
 		image: {
 			class: "effect-parallax hero-img",
