--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -17,7 +17,7 @@ block pageInfo
 block content
 	//- Banner layer
 	+banner({
-		title: "A showcase of some of the projects I have taken on.",
+		title: "A showcase of my projects.",
 		content: "A potfolio of projects I have completed, and even some that are still on-going.",
 		image: {
 			class: "effect-parallax hero-img",
@@ -38,6 +38,7 @@ block content
 				class: "layout-padding-vert-small"
 			})
 				span.layout-margin-horz-left-large.layout-inline-block= " "
+				span.layout-inline.layout-margin-dull As a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic, etc...
 				p.layout-inline.layout-margin-dull(lorem="3")
 				+link({
 					href: "/",
