--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -28,15 +28,15 @@ mixin footer(value = {})
 				+link({
 					href: "https://www.linkedin.com/in/o-josephojo/",
 					content: "LinkedIn"
-				})
+				})(target="_blank")
 				span= " - "
 				+link({
 					href: "https://github.com/laoluojo",
 					content: "Github"
-				})
+				})(target="_blank")
 				span= " - "
 				span(itemprop="email")
 					+link({
 						href: "mailto:laoluojo@gmail.com",
 						content: "Email"
-					})
+					})(target="_blank")
