--- a/views/app.pug
+++ b/views/app.pug
@@ -15,6 +15,12 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 					description: "Hello, my name is Joseph Ojo and this is my portfolio website. This website contains all my projects, my resume and ways to contact me."
 				};
 
+		link(rel="preconnect" href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
+		link(rel="preconnect" href="https://www.josephojo.com/" crossorigin)
+
+		link(rel="dns-prefetch" href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
+		link(rel="dns-prefetch" href="https://www.josephojo.com/" crossorigin)
+
 		meta(charset="utf-8")
 		meta(http-equiv="Accept-CH" content="DPR, Viewport-Width, Width")
 		meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
@@ -22,7 +28,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		if dev
 			meta(http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/ https://www.josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self' * blob: ws:; block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; child-src 'none'; frame-src 'none'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/okikio-assets/;")
 
-		meta(name="robots" content="index,follow")
+		meta(name="robots" content="index, follow")
 		meta(name="copyright" content="Joseph Ojo")
 
 		meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
@@ -38,9 +44,6 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 
 		block seo
 			+seo(page)
-
-		link(rel="preconnect" href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
-		link(rel="preconnect" href="https://www.josephojo.com/" crossorigin)
 
 		link(rel="apple-touch-icon", sizes="57x57", href="/apple-icon-57x57.png")
 		link(rel="apple-touch-icon", sizes="60x60", href="/apple-icon-60x60.png")
@@ -70,14 +73,15 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		meta(name="apple-mobile-web-app-status-bar-style", content="white")
 		meta(name="msapplication-TileImage", content="/ms-icon-144x144.png")
 
-		link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" type="font/woff2" crossorigin)
-		link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
-		link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
-		link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
+		//- link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" type="font/woff2" crossorigin)
+		//- link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
+		//- link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
+		//- link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
 		link(rel="stylesheet" href="./css/app.min.css" async)
 
 		<!--[if lt IE 9]>
 			link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
+			link(rel="dns-prefetch" href="https://cdnjs.cloudflare.com/" crossorigin)
 		<![endif]-->
 
 		script(src="./js/ver-check.min.js" inline async)
