--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -38,17 +38,17 @@ block content
 								+link({
 									href: "https://www.linkedin.com/in/o-josephojo/",
 									content: "LinkedIn"
-								})(target="_blank")
+								})(target="_blank" rel="noreferrer")
 							li
 								+link({
 									href: "https://github.com/laoluojo",
 									content: "Github"
-								})(target="_blank")
+								})(target="_blank" rel="noreferrer")
 							li(itemprop="email")
 								+link({
 									href: "mailto:laoluojo@gmail.com",
 									content: "Email"
-								})(target="_blank")
+								})(target="_blank" rel="noreferrer")
 
 block footer
 	+footer({
