Fixed sitemap bug

--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -60,7 +60,7 @@ block content
 						//- Contact
 						li
 							+link({
-								href: "/my-contact-info",
+								href: "/contact-me",
 								class: "style-italic style-underline",
 								content: "Contact"
 							})
